feat(transactions): Refactor transaction module to clean architecture and implement some code improvements